# Diabetes-Analysis

./: .gitattributes  .gitignore  Experimental_bolus.ipynb  Experimental_bolus.py  Exploratory.ipynb  Exploratory.py  Hypoglycaemia.ipynb  Hypoglycaemia.py  ISIG-analysis.ipynb  LICENCE.txt  Misc.ipynb  Preprocessor.ipynb  Preprocessor.py  README.md  Trend_Descriptive-local.ipynb  Trend_Descriptive.ipynb  Trend_Descriptive.py  Utils.ipynb  Utils.py  basic_mail.py  data_import_config.json  decorators.py  discussion.md  env.yml  imports_template.py  mySugr Exploratory.ipynb  preproc.py  preproc.toml  pyproject.toml  requirements.txt  sync.py  todo.md
doubt/: auto-config.toml  new_preproc.py  newslopes.py  parser.ipynb  parser.py
notebooks/: Exploratory.ipynb  Time Profiling.ipynb  parse_freestyle.ipynb
notebooks_to_python/: Experimental_bolus.py  Time Profiling.py  Trend_Descriptive.py  mySugr Exploratory.py  parse_freestyle.py
playground/: auto_import.py  debug.py  some_tests.py  wow
sugrpkg/: Experimental_bolus.py  Exploratory.py  Hypoglycaemia.py  Preprocessor.py  Trend_Descriptive.py  Utils.py  basic_mail.py  customobjs.py  decorators.py  formulae.py  imports_template.py  login.py  mySugr Exploratory.py  parse_freestyle.py  preproc.py  sync.py  test_hydrogen.py
sugrpkg/assets/: carelink_parsing.py  carelink_parsing.toml
sugrpkg/parsing/: carelink.py
sugrpkg/utils/: basic_mail.py  customobjs.py
