[tool.poetry]
name = "Diabetes-Analysis"
version = "0.1.0"
description = "Glycaemic data analysis to improve therapy."
authors = ["Gustavo Magaña López <gmaganna.biomed@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.3"
numpy = "^1.18.3"
scipy = "^1.4.1"
sklearn = "^0.0"
jupyter = "^1.0.0"
ipython = "^7.13.0"
seaborn = "^0.10.1"
statsmodels = "^0.11.1"
google-api-python-client = "^1.8.2"
google-auth-httplib2 = "^0.0.3"
google-auth-oauthlib = "^0.4.1"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
